--- a/templates/index.html
+++ b/templates/index.html
@@ -150,7 +150,7 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             max-width: 1200px;
             width: 100%;
-            height: 200px; /* Fixed height */
+            height: 1024px; /* Fixed height */
             overflow-y: scroll; /* Enable vertical scrolling */
             box-sizing: border-box;
 			grid-column: 1 / -1; /* 這會讓元素從第一列開始，一直延伸到最後一列的邊界 */
@@ -205,7 +205,7 @@
                 <button @click="setControlMode('manual')">Set Manual Mode</button>
                 <button @click="setControlMode('avoidance')">Set Avoidance Mode</button>
                 <button @click="setControlMode('autonomous')">Set Autonomous Mode</button>
-                <button @click="registerCamera('192.168.5.1')">Register Camera (192.168.5.1)</button>
+                <button @click="registerCamera('192.168.0.147')">Register Camera (192.168.0.147)</button>
             </div>
             <button class="reset-button">Reset Button</button>
         </div>
@@ -248,7 +248,7 @@
                         this.addLog('Stream stopped.', 'gui', 'info');
                     } else {
                         // If stream is stopped, start it
-                        this.streamUrl = `http://${this.esp32CamIp}:81/stream`;
+                        this.streamUrl = `http://${this.esp32CamIp}/stream`;
                         this.streamButtonText = 'Stop Stream';
                         this.addLog(`Starting stream from ${this.streamUrl}`, 'gui', 'info');
                     }
